refactor: split ReplaySession into focused playback classes
Extract per-tick playback responsibilities out of the ~600-line ReplaySession
into purpose-built collaborators under playback/:

- FakeEntityManager: spawn/destroy/move fake players and mobs
- ReplayInteractionHandler: viewer click/interact routing
- ReplayViewerManager: viewer set tracking and state
- SessionControl: pause/resume/seek lifecycle

ReplaySession now owns the lifecycle and delegates per-tick work to these
components. PlaybackEngine, ReplayBlockManager, and ReplayInventoryUI are
updated to consume the new collaborators (and the world snapshot pipeline
where applicable). Adds boundary and integration tests for each piece.