@@ -1,73 +1,108 @@
 package me.justindevb.replay;
 
-import com.github.retrooper.packetevents.PacketEvents;
-import com.github.retrooper.packetevents.event.PacketListener;
-import com.github.retrooper.packetevents.event.PacketReceiveEvent;
-import com.github.retrooper.packetevents.protocol.packettype.PacketType;
-import com.github.retrooper.packetevents.wrapper.play.client.WrapperPlayClientInteractEntity;
-import com.github.retrooper.packetevents.wrapper.play.server.WrapperPlayServerDestroyEntities;
 import com.tcoded.folialib.wrapper.task.WrappedTask;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.UUID;
+import me.justindevb.replay.api.events.ReplayStartEvent;
+import me.justindevb.replay.api.events.ReplayStopEvent;
 import me.justindevb.replay.entity.RecordedEntity;
 import me.justindevb.replay.entity.RecordedEntityFactory;
 import me.justindevb.replay.entity.RecordedPlayer;
-import me.justindevb.replay.api.events.ReplayStartEvent;
-import me.justindevb.replay.api.events.ReplayStopEvent;
+import me.justindevb.replay.playback.FakeEntityManager;
 import me.justindevb.replay.playback.PlaybackEngine;
 import me.justindevb.replay.playback.ReplayBlockManager;
+import me.justindevb.replay.playback.ReplayInteractionHandler;
 import me.justindevb.replay.playback.ReplayInventoryUI;
+import me.justindevb.replay.playback.ReplayViewerManager;
+import me.justindevb.replay.playback.SessionControl;
 import me.justindevb.replay.recording.TimelineEvent;
+import me.justindevb.replay.snapshot.WorldSnapshot;
+import me.justindevb.replay.storage.ReplayData;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
-import org.bukkit.*;
+import org.bukkit.Bukkit;
+import org.bukkit.Location;
+import org.bukkit.World;
 import org.bukkit.entity.Player;
-import org.bukkit.event.EventHandler;
-import org.bukkit.event.EventPriority;
 import org.bukkit.event.HandlerList;
-import org.bukkit.event.Listener;
-import org.bukkit.event.player.PlayerInteractAtEntityEvent;
-import org.bukkit.event.player.PlayerQuitEvent;
-
-import java.util.*;
 
 /**
- * Coordinator for a single replay viewing session.
- * Delegates block state management to {@link ReplayBlockManager},
- * event dispatch to {@link PlaybackEngine}, and UI/inventory to {@link ReplayInventoryUI}.
+ * Coordinator for a single replay viewing session. Owns the tick loop, timeline,
+ * seek logic, and lifecycle. Delegates block state management to
+ * {@link ReplayBlockManager}, event dispatch to {@link PlaybackEngine},
+ * UI/inventory to {@link ReplayInventoryUI}, fake-entity bookkeeping to
+ * {@link FakeEntityManager}, viewer state and disconnect handling to
+ * {@link ReplayViewerManager}, and viewer interactions to
+ * {@link ReplayInteractionHandler}.
  */
-public class ReplaySession implements Listener, PacketListener {
+public class ReplaySession {
 
     private final Player viewer;
     private final Replay replay;
-
-    private WrappedTask replayTask = null;
-    private List<TimelineEvent> timeline;
-    private final Set<Integer> trackedEntityIds = new HashSet<>();
+    private final ReplayRegistry replayRegistry;
+    private final WorldSnapshot worldSnapshot;
     private final Set<UUID> deadEntities = new HashSet<>();
     private final Map<UUID, RecordedEntity> recordedEntities = new HashMap<>();
+    // Delegates
+    private final ReplayBlockManager blockManager;
+    private final FakeEntityManager fakeEntityManager;
+    private final PlaybackEngine playbackEngine;
+    private final ReplayInventoryUI inventoryUI;
+    private final ReplayViewerManager viewerManager;
+    private final ReplayInteractionHandler interactionHandler;
+    private WrappedTask replayTask = null;
+    private List<TimelineEvent> timeline;
     private int tick = 0;
     private boolean paused = false;
     private boolean stopped = false;
 
-    // Delegates
-    private final ReplayBlockManager blockManager;
-    private final PlaybackEngine playbackEngine;
-    private final ReplayInventoryUI inventoryUI;
+    public ReplaySession(ReplayData data, Player viewer, Replay replay, ReplayRegistry replayRegistry) {
+        this(data != null ? data.timeline() : null,
+            data != null ? data.worldSnapshot() : null,
+            viewer, replay, replayRegistry);
+    }
 
-    public ReplaySession(List<TimelineEvent> timeline, Player viewer, Replay replay) {
+    public ReplaySession(List<TimelineEvent> timeline, WorldSnapshot worldSnapshot, Player viewer, Replay replay, ReplayRegistry replayRegistry) {
         this.timeline = timeline;
+        this.worldSnapshot = worldSnapshot;
         this.viewer = viewer;
         this.replay = replay;
+        this.replayRegistry = replayRegistry;
+
+        SessionControl sessionControl = new SessionControl() {
+            @Override
+            public void togglePause() {
+                paused = !paused;
+            }
+
+            @Override
+            public void skipSeconds(int seconds) {
+                ReplaySession.this.skipSeconds(seconds);
+            }
+
+            @Override
+            public void stop() {
+                ReplaySession.this.stop();
+            }
+
+            @Override
+            public boolean isActive() {
+                return ReplaySession.this.isActive();
+            }
+        };
 
         this.blockManager = new ReplayBlockManager(viewer, replay);
-        this.playbackEngine = new PlaybackEngine(viewer, replay, trackedEntityIds, deadEntities, recordedEntities, blockManager);
-        this.inventoryUI = new ReplayInventoryUI(viewer, () -> recordedEntities, new ReplayInventoryUI.SessionControl() {
-            @Override public void togglePause() { paused = !paused; }
-            @Override public void skipSeconds(int seconds) { ReplaySession.this.skipSeconds(seconds); }
-            @Override public void stop() { ReplaySession.this.stop(); }
-            @Override public boolean isActive() { return ReplaySession.this.isActive(); }
-        });
+        this.fakeEntityManager = new FakeEntityManager(viewer);
+        this.playbackEngine = new PlaybackEngine(deadEntities, recordedEntities, blockManager, fakeEntityManager);
+        this.inventoryUI = new ReplayInventoryUI(viewer, () -> recordedEntities, sessionControl);
+        this.viewerManager = new ReplayViewerManager(viewer, replay, sessionControl);
+        this.interactionHandler = new ReplayInteractionHandler(viewer, replay, () -> recordedEntities, fakeEntityManager);
 
-        Bukkit.getPluginManager().registerEvents(this, replay);
         Bukkit.getPluginManager().registerEvents(inventoryUI, replay);
     }
 
@@ -77,26 +112,32 @@ public class ReplaySession implements Listener, PacketListener {
             return;
         }
 
-        ReplaySession existingSession = ReplayRegistry.getSessionForViewer(viewer);
-        ReplayRegistry.add(this);
+        ReplaySession existingSession = replayRegistry.getSessionForViewer(viewer);
+        replayRegistry.add(this);
         timeline = blockManager.enrichBlockBreakStageTimeline(timeline);
         if (existingSession != null) {
             inventoryUI.transferSavedInventory(existingSession.getInventoryUI());
+            viewerManager.inheritStateFrom(existingSession.viewerManager);
         } else {
             inventoryUI.copyInventory();
+            viewerManager.captureState();
         }
+        viewerManager.applyReplayState();
 
         TimelineEvent firstLocationEvent = timeline.stream()
-                .filter(e -> e instanceof TimelineEvent.PlayerMove || e instanceof TimelineEvent.EntityMove
-                        || e instanceof TimelineEvent.EntitySpawn)
-                .findFirst()
-                .orElse(null);
+            .filter(e -> e instanceof TimelineEvent.PlayerMove || e instanceof TimelineEvent.EntityMove
+                || e instanceof TimelineEvent.EntitySpawn)
+            .findFirst()
+            .orElse(null);
 
         if (firstLocationEvent != null) {
             Location teleportLoc = switch (firstLocationEvent) {
-                case TimelineEvent.PlayerMove e -> new Location(Bukkit.getWorld(e.world()), e.x(), e.y(), e.z(), e.yaw(), e.pitch());
-                case TimelineEvent.EntityMove e -> new Location(Bukkit.getWorld(e.world()), e.x(), e.y(), e.z(), e.yaw(), e.pitch());
-                case TimelineEvent.EntitySpawn e -> new Location(Bukkit.getWorld(e.world()), e.x(), e.y(), e.z(), 0f, 0f);
+                case TimelineEvent.PlayerMove e ->
+                    new Location(Bukkit.getWorld(e.world()), e.x(), e.y(), e.z(), e.yaw(), e.pitch());
+                case TimelineEvent.EntityMove e ->
+                    new Location(Bukkit.getWorld(e.world()), e.x(), e.y(), e.z(), e.yaw(), e.pitch());
+                case TimelineEvent.EntitySpawn e ->
+                    new Location(Bukkit.getWorld(e.world()), e.x(), e.y(), e.z(), 0f, 0f);
                 default -> null;
             };
             if (teleportLoc != null && teleportLoc.getWorld() != null) {
@@ -105,112 +146,110 @@ public class ReplaySession implements Listener, PacketListener {
         }
 
         inventoryUI.giveReplayControls();
+        // Apply the captured world snapshot first so unmodified blocks reflect the
+        // recording-time appearance even if the live world has been reset since.
+        // primeInitialBrokenBlockStates() then refines per-coordinate baselines for
+        // blocks that the timeline subsequently mutates.
+        blockManager.primeFromSnapshot(worldSnapshot);
         blockManager.primeInitialBrokenBlockStates(timeline);
 
         Bukkit.getPluginManager().callEvent(new ReplayStartEvent(viewer, this));
 
-        replay.getFoliaLib().getScheduler().runTimer(task -> {
-            if (paused) {
-                sendActionBar();
-                return;
-            }
-            replayTask = task;
+        replay.getFoliaLib().getScheduler().runTimer(this::runTickStep, 1L, 1L);
+    }
 
-            if (tick >= timeline.size()) {
-                task.cancel();
-                stop();
-                return;
-            }
-
-            if (viewer == null || !viewer.isOnline()) {
-                task.cancel();
-                recordedEntities.values().forEach(RecordedEntity::destroy);
-                recordedEntities.clear();
-                return;
-            }
-
-            TimelineEvent firstEvent = timeline.get(tick);
-            int recordedTick = firstEvent.tick();
-
-            while (tick < timeline.size()) {
-                TimelineEvent event = timeline.get(tick);
-                int eventTick = event.tick();
-                if (eventTick != recordedTick) break;
-
-                if (event instanceof TimelineEvent.BlockBreakStage bbs) {
-                    blockManager.showGlobalBlockBreakStage(bbs);
-                    tick++;
-                    continue;
-                }
-
-                String uuidStr = event.uuid();
-                if (uuidStr == null) {
-                    tick++;
-                    continue;
-                }
-
-                UUID uuid;
-                try {
-                    uuid = UUID.fromString(uuidStr);
-                } catch (IllegalArgumentException ex) {
-                    tick++;
-                    continue;
-                }
-
-                if (event instanceof TimelineEvent.PlayerQuit) {
-                    if (recordedEntities.get(uuid) instanceof RecordedPlayer rp) {
-                        viewer.sendMessage("[BetterReplay] " + rp.getName() + " disconnected");
-                    }
-                    RecordedEntity entity = recordedEntities.remove(uuid);
-                    if (entity != null) {
-                        entity.destroy();
-                        trackedEntityIds.remove(entity.getFakeEntityId());
-                    }
-                    tick++;
-                    continue;
-                }
-
-                if (deadEntities.contains(uuid)
-                        && (event instanceof TimelineEvent.PlayerMove || event instanceof TimelineEvent.EntityMove)) {
-                    tick++;
-                    continue;
-                }
-
-                RecordedEntity recorded = recordedEntities.get(uuid);
-
-                if (recorded != null && recorded.isDestroyed()) {
-                    recordedEntities.remove(uuid);
-                    tick++;
-                    continue;
-                }
-
-                if (recorded == null) {
-                    Location initialLoc = locationFromEvent(event);
-                    if (initialLoc == null) {
-                        tick++;
-                        continue;
-                    }
-
-                    recorded = RecordedEntityFactory.create(event, viewer);
-                    if (recorded == null) {
-                        tick++;
-                        continue;
-                    }
-
-                    recorded.spawn(initialLoc);
-                    recordedEntities.put(uuid, recorded);
-
-                    if (recorded instanceof RecordedPlayer rp) {
-                        TimelineEvent.InventoryUpdate inv = getInventorySnapshotForPlayer(uuid);
-                        if (inv != null) rp.updateInventory(inv);
-                    }
-                }
-
-                playbackEngine.handleEvent(recorded, event);
-                tick++;
-            }
+    /**
+     * One iteration of the replay tick loop scheduled from {@link #start()}.
+     * Package-private so deterministic scheduler-callback harness tests can drive it
+     * without needing the full Bukkit setup that {@code start()} requires.
+     */
+    void runTickStep(WrappedTask task) {
+        if (paused) {
             sendActionBar();
-        }, 1L, 1L);
+            return;
+        }
+        replayTask = task;
+
+        if (tick >= timeline.size()) {
+            task.cancel();
+            stop();
+            return;
+        }
+
+        if (!viewer.isOnline()) {
+            task.cancel();
+            return;
+        }
+
+        TimelineEvent firstEvent = timeline.get(tick);
+        int recordedTick = firstEvent.tick();
+
+        while (tick < timeline.size()) {
+            TimelineEvent event = timeline.get(tick);
+            int eventTick = event.tick();
+            if (eventTick != recordedTick) break;
+
+            if (event instanceof TimelineEvent.BlockBreakStage bbs) {
+                blockManager.showGlobalBlockBreakStage(bbs);
+                tick++;
+                continue;
+            }
+
+            UUID uuid = parseEventUuidOrNull(event);
+            if (uuid == null) {
+                tick++;
+                continue;
+            }
+
+            if (event instanceof TimelineEvent.PlayerQuit) {
+                if (recordedEntities.get(uuid) instanceof RecordedPlayer rp) {
+                    viewer.sendMessage("[BetterReplay] " + rp.getName() + " disconnected");
+                }
+                removeAndDestroyRecordedEntity(uuid);
+                tick++;
+                continue;
+            }
+
+            if (deadEntities.contains(uuid)
+                && (event instanceof TimelineEvent.PlayerMove || event instanceof TimelineEvent.EntityMove)) {
+                tick++;
+                continue;
+            }
+
+            RecordedEntity recorded = recordedEntities.get(uuid);
+
+            if (recorded != null && recorded.isDestroyed()) {
+                recordedEntities.remove(uuid);
+                tick++;
+                continue;
+            }
+
+            if (recorded == null) {
+                Location initialLoc = locationFromEvent(event);
+                if (initialLoc == null) {
+                    tick++;
+                    continue;
+                }
+
+                recorded = RecordedEntityFactory.create(event, viewer);
+                if (recorded == null) {
+                    tick++;
+                    continue;
+                }
+
+                recorded.spawn(initialLoc);
+                recordedEntities.put(uuid, recorded);
+
+                if (recorded instanceof RecordedPlayer rp) {
+                    TimelineEvent.InventoryUpdate inv = getInventorySnapshotForPlayer(uuid);
+                    if (inv != null) rp.updateInventory(inv);
+                }
+            }
+
+            playbackEngine.handleEvent(recorded, event);
+            tick++;
+        }
+        sendActionBar();
     }
 
     public void stop() {
@@ -224,11 +263,12 @@ public class ReplaySession implements Listener, PacketListener {
             recordedEntities.values().forEach(RecordedEntity::destroy);
             recordedEntities.clear();
 
-            clearFakeItems();
+            fakeEntityManager.clearAll();
             blockManager.incrementEpoch();
             blockManager.clearAllVisibleBreakStages();
             blockManager.restoreSessionBaseline();
             inventoryUI.restoreInventory();
+            viewerManager.restoreState();
             if (replayTask != null) {
                 replay.getFoliaLib().getScheduler().cancelTask(replayTask);
                 replayTask = null;
@@ -236,9 +276,10 @@ public class ReplaySession implements Listener, PacketListener {
 
             viewer.sendMessage("Replay finished");
         } finally {
-            ReplayRegistry.remove(this);
-            HandlerList.unregisterAll(this);
+            replayRegistry.remove(this);
             HandlerList.unregisterAll(inventoryUI);
+            viewerManager.shutdown();
+            interactionHandler.shutdown();
         }
     }
 
@@ -247,29 +288,38 @@ public class ReplaySession implements Listener, PacketListener {
     private void skipSeconds(int seconds) {
         if (timeline == null || timeline.isEmpty()) return;
 
-        int currentIndex = Math.max(0, Math.min(tick, timeline.size()));
-        int currentRecordedTick = currentIndex > 0 ? getRecordedTickAtIndex(currentIndex - 1) : 0;
-        int maxRecordedTick = getRecordedTickAtIndex(timeline.size() - 1);
-
-        int targetRecordedTick = currentRecordedTick + (seconds * 20);
-        if (targetRecordedTick < 0) targetRecordedTick = 0;
-        if (targetRecordedTick > maxRecordedTick) targetRecordedTick = maxRecordedTick;
-
-        int targetIndex = findTimelineIndexAfterRecordedTick(targetRecordedTick);
+        int currentIndex = getCurrentTimelineIndex();
+        int targetIndex = resolveSeekTargetIndex(currentIndex, seconds);
 
         if (targetIndex != currentIndex) {
             blockManager.incrementEpoch();
         }
 
+        applyBlockStateForSeek(currentIndex, targetIndex);
+
+        syncEntityStatesAtIndex(targetIndex);
+        tick = targetIndex;
+        sendActionBar();
+    }
+
+    private int getCurrentTimelineIndex() {
+        return Math.clamp(tick, 0, timeline.size());
+    }
+
+    private int resolveSeekTargetIndex(int currentIndex, int seconds) {
+        int currentRecordedTick = currentIndex > 0 ? getRecordedTickAtIndex(currentIndex - 1) : 0;
+        int maxRecordedTick = getRecordedTickAtIndex(timeline.size() - 1);
+        long targetRecordedTickLong = (long) currentRecordedTick + ((long) seconds * 20L);
+        int targetRecordedTick = (int) Math.clamp(targetRecordedTickLong, 0L, maxRecordedTick);
+        return findTimelineIndexAfterRecordedTick(targetRecordedTick);
+    }
+
+    private void applyBlockStateForSeek(int currentIndex, int targetIndex) {
         if (targetIndex > currentIndex) {
             blockManager.applyReplayBlockChangesInRange(currentIndex, targetIndex, timeline);
         } else if (targetIndex < currentIndex) {
             blockManager.rebuildReplayBlockStateUntil(targetIndex, timeline);
         }
-
-        syncEntityStatesAtIndex(targetIndex);
-        tick = targetIndex;
-        sendActionBar();
     }
 
     private void syncEntityStatesAtIndex(int targetIndex) {
@@ -282,14 +332,8 @@ public class ReplaySession implements Listener, PacketListener {
         int end = Math.min(targetIndex, timeline.size());
         for (int i = 0; i < end; i++) {
             TimelineEvent event = timeline.get(i);
-            String uuidStr = event.uuid();
-            if (uuidStr == null) continue;
-            UUID uuid;
-            try {
-                uuid = UUID.fromString(uuidStr);
-            } catch (IllegalArgumentException ignored) {
-                continue;
-            }
+            UUID uuid = parseEventUuidOrNull(event);
+            if (uuid == null) continue;
 
             firstEventByUUID.putIfAbsent(uuid, event);
 
@@ -299,7 +343,8 @@ public class ReplaySession implements Listener, PacketListener {
                 case TimelineEvent.InventoryUpdate inv -> lastInventoryByUUID.put(uuid, inv);
                 case TimelineEvent.PlayerQuit ignored2 -> shouldHaveQuitAtTarget.add(uuid);
                 case TimelineEvent.EntityDeath ignored2 -> shouldBeDeadAtTarget.add(uuid);
-                default -> {}
+                default -> {
+                }
             }
         }
 
@@ -312,11 +357,7 @@ public class ReplaySession implements Listener, PacketListener {
 
         for (UUID uuid : new HashSet<>(recordedEntities.keySet())) {
             if (!shouldExistAtTarget.contains(uuid)) {
-                RecordedEntity entity = recordedEntities.remove(uuid);
-                if (entity != null) {
-                    entity.destroy();
-                    trackedEntityIds.remove(entity.getFakeEntityId());
-                }
+                removeAndDestroyRecordedEntity(uuid);
             }
         }
 
@@ -335,7 +376,7 @@ public class ReplaySession implements Listener, PacketListener {
 
             entity.spawn(loc);
             recordedEntities.put(uuid, entity);
-            trackedEntityIds.add(entity.getFakeEntityId());
+            fakeEntityManager.track(entity.getFakeEntityId());
         }
 
         for (Map.Entry<UUID, TimelineEvent> entry : lastLocationByUUID.entrySet()) {
@@ -356,19 +397,28 @@ public class ReplaySession implements Listener, PacketListener {
 
     // -- Helpers --
 
-    private void clearFakeItems() {
-        for (int id : trackedEntityIds) {
-            WrapperPlayServerDestroyEntities destroy = new WrapperPlayServerDestroyEntities(id);
-            PacketEvents.getAPI().getPlayerManager().sendPacket(viewer, destroy);
+    private UUID parseEventUuidOrNull(TimelineEvent event) {
+        String uuidStr = event.uuid();
+        if (uuidStr == null) return null;
+        try {
+            return UUID.fromString(uuidStr);
+        } catch (IllegalArgumentException ignored) {
+            return null;
         }
-        trackedEntityIds.clear();
+    }
+
+    private void removeAndDestroyRecordedEntity(UUID uuid) {
+        RecordedEntity entity = recordedEntities.remove(uuid);
+        if (entity == null) return;
+        entity.destroy();
+        fakeEntityManager.untrack(entity.getFakeEntityId());
     }
 
     private TimelineEvent.InventoryUpdate getInventorySnapshotForPlayer(UUID uuid) {
         String uuidStr = uuid.toString();
         for (TimelineEvent event : timeline) {
             if (event instanceof TimelineEvent.InventoryUpdate inv
-                    && uuidStr.equals(inv.uuid())) {
+                && uuidStr.equals(inv.uuid())) {
                 return inv;
             }
         }
@@ -377,7 +427,7 @@ public class ReplaySession implements Listener, PacketListener {
 
     private int getRecordedTickAtIndex(int index) {
         if (timeline == null || timeline.isEmpty()) return 0;
-        int safeIndex = Math.max(0, Math.min(index, timeline.size() - 1));
+        int safeIndex = Math.clamp(index, 0, timeline.size() - 1);
         return timeline.get(safeIndex).tick();
     }
 
@@ -413,19 +463,11 @@ public class ReplaySession implements Listener, PacketListener {
                 low = mid + 1;
             }
         }
-        return Math.max(0, Math.min(result, timeline.size()));
+        return Math.clamp(result, 0, timeline.size());
     }
 
     private boolean isActive() {
-        return ReplayRegistry.contains(this);
-    }
-
-    public RecordedEntity getRecordedEntity(int entityId) {
-        for (RecordedEntity e : recordedEntities.values()) {
-            if (e.getFakeEntityId() == entityId)
-                return e;
-        }
-        return null;
+        return replayRegistry.contains(this);
     }
 
     private String formatTime(int ticks) {
@@ -445,56 +487,13 @@ public class ReplaySession implements Listener, PacketListener {
         Component bar;
         if (paused) {
             bar = Component.text("\u23F8 Replay paused: ", NamedTextColor.YELLOW)
-                    .append(Component.text(current + " / " + total, NamedTextColor.GRAY));
+                .append(Component.text(current + " / " + total, NamedTextColor.GRAY));
         } else {
             bar = Component.text("\u25B6 Replay: ", NamedTextColor.GREEN)
-                    .append(Component.text(current + " / " + total, NamedTextColor.GRAY))
-                    .append(Component.text(" (" + percent + "%)", NamedTextColor.DARK_GRAY));
+                .append(Component.text(current + " / " + total, NamedTextColor.GRAY))
+                .append(Component.text(" (" + percent + "%)", NamedTextColor.DARK_GRAY));
         }
         viewer.sendActionBar(bar);
-    }
-
-    // -- Remaining event handlers that stay on the session --
-
-    @EventHandler
-    public void onPlayerQuit(PlayerQuitEvent event) {
-        if (event.getPlayer().equals(viewer))
-            stop();
-    }
-
-    @EventHandler(priority = EventPriority.MONITOR)
-    public void onEntityInteract(PlayerInteractAtEntityEvent e) {
-        Player viewerPlayer = e.getPlayer();
-        if (!viewer.equals(viewerPlayer))
-            return;
-        if (!(e.getRightClicked() instanceof Player fake))
-            return;
-        RecordedEntity recordedEntity = recordedEntities.get(fake.getUniqueId());
-        if (!(recordedEntity instanceof RecordedPlayer rp))
-            return;
-        rp.openInventoryForViewer(viewerPlayer);
-        e.setCancelled(true);
-    }
-
-    @Override
-    public void onPacketReceive(PacketReceiveEvent event) {
-        if (!event.getPacketType().equals(PacketType.Play.Client.INTERACT_ENTITY))
-            return;
-        if (!event.getPlayer().equals(viewer))
-            return;
-        WrapperPlayClientInteractEntity wrapper = new WrapperPlayClientInteractEntity(event);
-        if (trackedEntityIds.contains(wrapper.getEntityId()))
-            event.setCancelled(true);
-        int entityId = wrapper.getEntityId();
-        RecordedEntity recordedEntity = recordedEntities.values()
-                .stream()
-                .filter(e -> e.getFakeEntityId() == entityId)
-                .findFirst()
-                .orElse(null);
-        if (recordedEntity instanceof RecordedPlayer rp) {
-            rp.openInventoryForViewer(viewer);
-            event.setCancelled(true);
-        }
     }
 
     public Player getViewer() {
@@ -503,5 +502,13 @@ public class ReplaySession implements Listener, PacketListener {
 
     public ReplayInventoryUI getInventoryUI() {
         return inventoryUI;
+    }
+
+    public RecordedEntity getRecordedEntity(int entityId) {
+        for (RecordedEntity e : recordedEntities.values()) {
+            if (e.getFakeEntityId() == entityId)
+                return e;
+        }
+        return null;
     }
 }
